<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/name_1"
        android:summary="@string/name_2"
        android:defaultValue=""
        android:key="username"/>
    <PreferenceCategory>
        <ListPreference
            android:title="@string/webservice_1"
            android:summary="@string/webservice_2"
            android:key="webservice" />
        <ListPreference
            android:title="@string/http_1"
            android:summary="@string/http_2"
            android:key="http"
            android:entries="@array/http_array"
            android:entryValues="@array/http_array"
            android:defaultValue="@string/post"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Preference category">
        <ListPreference
            android:title="@string/databases_1"
            android:summary="@string/databases_2"
            android:key="database"
            android:entries="@array/databases_array"
            android:entryValues="@array/databases_array"
            android:defaultValue="@string/room"
            />
    </PreferenceCategory>
</PreferenceScreen>