<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.DashboardActivity">

    <Button
        android:id="@+id/bFavQuotes"
        android:layout_width="@dimen/button_dashboardv_width"
        android:layout_height="@dimen/button_dashboardv_height"
        android:background="@drawable/shape_n_color"
        android:onClick="onClickButton"
        android:text="@string/fav_q"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_textv_size"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bGetQuotes" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="@dimen/button_dashboardv_width"
        android:layout_height="@dimen/button_dashboardv_height"
        android:background="@drawable/shape_n_color"
        android:onClick="onClickButton"
        android:text="@string/about"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_textv_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSettings" />

    <Button
        android:id="@+id/bGetQuotes"
        android:layout_width="@dimen/button_dashboardv_width"
        android:layout_height="@dimen/button_dashboardv_height"
        android:background="@drawable/shape_n_color"
        android:onClick="onClickButton"
        android:text="@string/get_q"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_textv_size"
        app:layout_constraintBottom_toTopOf="@+id/bFavQuotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="@dimen/button_dashboardv_width"
        android:layout_height="@dimen/button_dashboardv_height"
        android:background="@drawable/shape_n_color"
        android:onClick="onClickButton"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_textv_size"
        app:layout_constraintBottom_toTopOf="@+id/bAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bFavQuotes" />

</androidx.constraintlayout.widget.ConstraintLayout>